// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCardListStack should show button accessory 1`] = `
<DocumentFragment>
  <div
    class="bpk-card-list-stack"
  />
  <button
    class="bpk-button bpk-button--primary"
    type="button"
  >
    Show More
  </button>
</DocumentFragment>
`;

exports[`BpkCardListStack should show expand accessory 1`] = `
<DocumentFragment>
  <div
    class="bpk-card-list-stack"
  />
  <button
    class="bpk-button bpk-button--link"
    data-testid="button"
    type="button"
  >
    Show More
    <span
      style="line-height: 1rem; display: inline-block; margin-top: 0.25rem; vertical-align: top;"
    >
      <svg
        aria-hidden="true"
        class="bpk-icon--rtl-support"
        height="1rem"
        viewBox="0 0 24 24"
        width="1rem"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19.113 8.095a1.496 1.496 0 0 1 0 2.008l-6.397 5.948a1 1 0 0 1-1.358.003l-6.532-6.01a1.427 1.427 0 0 1 .138-1.949 1.57 1.57 0 0 1 1.997-.103l5.078 4.638 4.97-4.535a1.72 1.72 0 0 1 2.104 0"
        />
      </svg>
    </span>
  </button>
</DocumentFragment>
`;
